Add help-overlay.ui and related changes

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -4,6 +4,7 @@ gnome-system-monitor.desktop.in.in
 gnome-system-monitor-kde.desktop.in.in
 gnome-system-monitor.appdata.xml.in
 org.gnome.gnome-system-monitor.policy.in.in
+data/help-overlay.ui
 data/interface.ui
 data/lsof.ui
 data/menus.ui
